# flask_practicum_gb

./: .env-sample  README.md  app_00.py  forms_login.py  forms_registration.py  models.py  pyproject.toml  wsgi.py
static/css/: style.css
templates/: base.html  count_num.html  donwload_message.html  index.html  login.html  message_login_not_found.html  message_login_password_not_feet.html  message_name.html  registration.html  result.html  text_area.html  upload.html
uploads/: log.txt
