[tool.poetry]
name = "ls"
version = "0.1.0"
description = "class work"
authors = ["darkwolf <darkwolf1990janary@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.0.5"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
